--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "avidian/semaphorephp",
+	"name": "avidian/semaphore",
 	"description": "A wrapper for accessing the Semaphore SMS API",
 	"type": "library",
 	"license": "MIT",
